--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+﻿@import 'material';
+@import 'app/variables';
+
+body {
+  font-family: Roboto, 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  font-size: $font-size;
+  margin: 0;
+}
+
+@import 'app/container/container';
+@import 'app/hover-stretch/hover-stretch';
