feat(description): initial pass at first section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<piz-nav-bar [class.mat-elevation-z4]="scrolled"></piz-nav-bar>
+<pp-nav-bar [class.mat-elevation-z4]="scrolled"></pp-nav-bar>
 
 <main (scroll)="onScroll($event)">
     <router-outlet></router-outlet>
 
-    <piz-footer></piz-footer>
+    <pp-footer></pp-footer>
 </main>
