--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,7 +7,7 @@
     height: 100vh;
     overflow: hidden;
 
-    piz-nav-bar {
+    pp-nav-bar {
         transition: {
             duration: $mat-elevation-transition-duration;
             property: box-shadow;
