--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer pizContainer fxFlex fxLayout fxLayoutAlign="space-between">
-  <piz-logo></piz-logo>
+<footer ppContainer fxFlex fxLayout fxLayoutAlign="space-between">
+  <pp-logo></pp-logo>
   <div>Copyright</div>
 </footer>
