--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,1 +1,10 @@
+pp-section {
+    position: relative;
+    overflow: hidden;
 
+    img {
+        display: none;
+        height: 100%;
+        width: auto;
+    }
+}
