--- a/src/app/hover-stretch/hover-stretch.scss
+++ b/src/app/hover-stretch/hover-stretch.scss
@@ -8,7 +8,7 @@
     }
 }
 
-.piz-hover-stretch {
+.pp-hover-stretch {
     color: currentColor;
     display: inline-block;
     position: relative;
