--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar fxLayout>
-  <div pizContainer>
+  <div ppContainer>
     <a routerLink=".">
-      <piz-logo></piz-logo>
+      <pp-logo></pp-logo>
     </a>
 
     <div fxFlex="1 0 auto"></div>
