--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -9,7 +9,7 @@ mat-toolbar {
         display: flex;
         align-items: center;
         
-        piz-logo {
+        pp-logo {
             font-size: 1.5rem;
         }
 
