feat(description): responsive design
2nd pass

--- a/src/app/description/description.component.html
+++ b/src/app/description/description.component.html
@@ -1,10 +1,12 @@
-<div>
+<div class="img-container">
   <img src="assets/portuguesa.jpg" />
-  <div></div>
 </div>
-<p>
-  Dois amigos, com experiência adquirida como proprietários de pizzaria em Porto Seguro, Bahia, 
-  e Belo Horizonte, Minas Gerais, e depois com disk pizza em Santos, São Paulo,
-  deixam o ramo de alimentação e retornam em 2017, através de festas entre amigos.
-  Em 2018 se propoem a realizar eventos para o público de Curitiba.
-</p>
+<div class="text-container">
+  <div class="background"></div>
+  <p ppContainer>
+    Dois amigos, com experiência adquirida como proprietários de pizzaria em Porto Seguro, Bahia, 
+    e Belo Horizonte, Minas Gerais, e depois com disk pizza em Santos, São Paulo,
+    deixam o ramo de alimentação e retornam em 2017, através de festas entre amigos.
+    Em 2018 se propoem a realizar eventos para o público de Curitiba.
+  </p>
+</div>
