--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,4 @@
-<pp-section [style.background-color]="'#eee'">
-  <pp-description ppContainer></pp-description>
-</pp-section>
+<pp-description></pp-description>
 <pp-section [style.background-color]="'#ddd'">
   <p>
     Texto
