style: typography and logo revamp

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer ppContainer fxFlex fxLayout fxLayoutAlign="space-between">
+<footer ppContainer fxFlex fxLayout fxLayoutAlign="space-between center">
   <pp-logo></pp-logo>
   <div>Copyright</div>
 </footer>
