--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,11 @@
 <pp-description></pp-description>
-<pp-section [style.background-color]="'#ddd'">
+<pp-section [style.background-color]="'#E0E0E0'">
   <p>
     Texto
   </p>
   <img src="assets/especial.jpg" />
 </pp-section>
-<pp-section [style.background-color]="'#ccc'">
+<pp-section [style.background-color]="'#BDBDBD'">
   <img src="assets/palmito-calabresa.jpg" />
   <p>
     Texto
