--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  font-family: Roboto, 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   font-size: $font-size;
   margin: 0;
 }
