feat(images): move to storage and optimize load time

--- a/src/app/description/description.component.scss
+++ b/src/app/description/description.component.scss
@@ -9,7 +9,7 @@
 
     .img {
         background: {
-            image: url('/assets/portuguesa.jpg');
+            image: url('https://firebasestorage.googleapis.com/v0/b/partiu-pizza.appspot.com/o/portuguesa.jpg?alt=media&token=494d302c-7e15-4089-a1c4-bf2f3061c655');
             repeat: no-repeat;
             position: 70% 70%;
             size: 130%;
