--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,10 +3,10 @@
   <p>
     Texto
   </p>
-  <img src="assets/especial.jpg" />
+  <!-- <img src="assets/especial.jpg" /> -->
 </pp-section>
 <pp-section [style.background-color]="'#BDBDBD'">
-  <img src="assets/palmito-calabresa.jpg" />
+  <!-- <img src="assets/palmito-calabresa.jpg" /> -->
   <p>
     Texto
   </p>
